docs/api/qiskit/0.19/qiskit.circuit.Instruction.md
---
title: Instruction
description: API reference for qiskit.circuit.Instruction
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.Instruction
---

# Instruction

<span id="qiskit.circuit.Instruction" />

`Instruction(name, num_qubits, num_clbits, params)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Generic quantum instruction.

Create a new instruction.

**Parameters**

*   **name** (*str*) – instruction name
*   **num\_qubits** (*int*) – instruction’s qubit width
*   **num\_clbits** (*int*) – instruction’s clbit width
*   **params** (*list\[int|float|complex|str|ndarray|list|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression")*]*) – list of parameters

**Raises**

**CircuitError** – when the register is not in the correct format.

## Attributes

### decompositions

Get the decompositions of the instruction from the SessionEquivalenceLibrary.

### definition

Return definition in terms of other basic gates.

### params

return instruction params.

## Methods

### add\_decomposition

<span id="qiskit.circuit.Instruction.add_decomposition" />

`Instruction.add_decomposition(decomposition)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Add a decomposition of the instruction to the SessionEquivalenceLibrary.

### assemble

<span id="qiskit.circuit.Instruction.assemble" />

`Instruction.assemble()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Assemble a QasmQobjInstruction

### broadcast\_arguments

<span id="qiskit.circuit.Instruction.broadcast_arguments" />

`Instruction.broadcast_arguments(qargs, cargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Validation of the arguments.

**Parameters**

*   **qargs** (*List*) – List of quantum bit arguments.
*   **cargs** (*List*) – List of classical bit arguments.

**Yields**

*Tuple(List, List)* – A tuple with single arguments.

**Raises**

**CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.

### c\_if

<span id="qiskit.circuit.Instruction.c_if" />

`Instruction.c_if(classical, val)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Add classical condition on register classical and value val.

### copy

<span id="qiskit.circuit.Instruction.copy" />

`Instruction.copy(name=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Copy of the instruction.

**Parameters**

**name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

**Returns**

**a copy of the current instruction, with the name**

updated if it was provided

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

### inverse

<span id="qiskit.circuit.Instruction.inverse" />

`Instruction.inverse()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Invert this instruction.

If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

**Returns**

a fresh instruction for the inverse

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

**Raises**

**CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.

### is\_parameterized

<span id="qiskit.circuit.Instruction.is_parameterized" />

`Instruction.is_parameterized()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Return True .IFF. instruction is parameterized else False

### mirror

<span id="qiskit.circuit.Instruction.mirror" />

`Instruction.mirror()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

For a composite instruction, reverse the order of sub-gates.

This is done by recursively mirroring all sub-instructions. It does not invert any gate.

**Returns**

a fresh gate with sub-gates reversed

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

### qasm

<span id="qiskit.circuit.Instruction.qasm" />

`Instruction.qasm()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Return a default OpenQASM string for the instruction.

Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).

### repeat

<span id="qiskit.circuit.Instruction.repeat" />

`Instruction.repeat(n)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py "view source code")

Creates an instruction with gate repeated n amount of times.

**Parameters**

**n** (*int*) – Number of times to repeat the instruction

**Returns**

Containing the definition.

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

**Raises**

**CircuitError** – If n \< 1.

